<resources>
    <string name="app_name">iTrueFace</string>

    <string name="action_settings">Settings</string>

    <string name="home">首页</string>
    <string name="me">个人中心</string>
    <string name="find">发现</string>
    <string name="city">城市</string>
    <string name="search">搜索</string>
    <string name="message">消息</string>
    <string name="all">全部</string>
    <string name="course_name">课程名称 : </string>
    <string name="speaker">主讲 : </string>


    <string name="account">我的账户</string>
    <string name="course">我的课程</string>
    <string name="teacher">老师</string>
    <string name="collection">收藏</string>
    <string name="setting">设置</string>
</resources>
