<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity">

    <com.evast.evastcore.widget.TemplateTitle
        android:id="@+id/main_title" android:layout_width="match_parent"
        android:layout_height="45dp"/>
    <LinearLayout
        android:id="@+id/nagivation_bottom" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_alignParentBottom="true" android:background="@color/white">
        <RelativeLayout
            android:id="@+id/home_nagivation" android:layout_width="0dp"
            android:layout_height="match_parent" android:layout_weight="1">
            <ImageView
                android:id="@+id/home_image" android:layout_width="25dp"
                android:layout_height="25dp" android:background="@drawable/home_background"
                android:layout_centerHorizontal="true" android:layout_marginTop="7dp"/>
            <TextView
                android:id="@+id/home_text" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/home"
                android:textColor="@color/navigation_brown" android:layout_below="@id/home_image"
                android:layout_centerHorizontal="true" android:layout_marginBottom="5dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/find_nagivation" android:layout_width="0dp"
            android:layout_height="match_parent" android:layout_weight="1">
            <ImageView
                android:id="@+id/find_image" android:layout_width="25dp"
                android:layout_height="25dp" android:background="@drawable/find_background"
                android:layout_centerHorizontal="true" android:layout_marginTop="7dp"/>
            <TextView
                android:id="@+id/find_text" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/find"
                android:textColor="@color/navigation_brown" android:layout_below="@id/find_image"
                android:layout_centerHorizontal="true" android:layout_marginBottom="5dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/message_nagivation" android:layout_width="0dp"
            android:layout_height="match_parent" android:layout_weight="1">
            <ImageView
                android:id="@+id/message_image" android:layout_width="25dp"
                android:layout_height="25dp" android:background="@drawable/message_background"
                android:layout_centerHorizontal="true" android:layout_marginTop="7dp"/>
            <TextView
                android:id="@+id/message_text" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/message"
                android:textColor="@color/navigation_brown" android:layout_below="@id/message_image"
                android:layout_centerHorizontal="true" android:layout_marginBottom="5dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/me_nagivation" android:layout_width="0dp"
            android:layout_height="match_parent" android:layout_weight="1">
            <ImageView
                android:id="@+id/me_image" android:layout_width="25dp"
                android:layout_height="25dp" android:background="@drawable/me_background"
                android:layout_centerHorizontal="true" android:layout_marginTop="7dp" />
            <TextView
                android:id="@+id/me_text" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/me"
                android:textColor="@color/navigation_brown" android:layout_below="@id/me_image"
                android:layout_centerHorizontal="true" android:layout_marginBottom="5dp"/>
        </RelativeLayout>
    </LinearLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/viewpage" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_above="@id/nagivation_bottom"
            android:layout_below="@id/main_title"/>
</RelativeLayout>
