<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/me_background">
    <ImageView
        android:id="@+id/me_headbackgrond_image" android:layout_width="match_parent"
        android:layout_height="170dp" android:scaleType="center"
        android:background="@mipmap/home_test_two" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/me_head_image" android:layout_width="60dp"
        android:layout_height="60dp" android:src="@mipmap/home_test_two"
        android:layout_marginLeft="25dp" android:layout_alignBottom="@id/me_headbackgrond_image"
        android:layout_marginBottom="-30dp" android:scaleType="centerCrop"/>
    <LinearLayout
        android:id="@+id/me_head_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_toRightOf="@id/me_head_image" android:layout_alignBottom="@id/me_headbackgrond_image"
        android:layout_marginLeft="7dp" android:layout_marginBottom="3dp">
        <TextView
            android:id="@+id/me_name_text" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="Moers"
            android:textColor="@color/white"/>
        <ImageView
            android:id="@+id/me_head_star_one" android:layout_width="10dp"
            android:layout_height="10dp" android:src="@mipmap/star_true"
            android:baselineAlignBottom="true" android:layout_marginLeft="9dp"/>
        <ImageView
            android:id="@+id/me_head_star_two" android:layout_width="10dp"
            android:layout_height="10dp" android:src="@mipmap/star_true"
            android:baselineAlignBottom="true" android:layout_marginLeft="3dp"/>
        <ImageView
            android:id="@+id/me_head_star_three" android:layout_width="10dp"
            android:layout_height="10dp" android:src="@mipmap/star_true"
            android:baselineAlignBottom="true" android:layout_marginLeft="3dp"/>
        <ImageView
            android:id="@+id/me_head_star_four" android:layout_width="10dp"
            android:layout_height="10dp" android:src="@mipmap/star_true"
            android:baselineAlignBottom="true" android:layout_marginLeft="3dp"/>
        <ImageView
            android:id="@+id/me_head_star_five" android:layout_width="10dp"
            android:layout_height="10dp" android:src="@mipmap/star_false"
            android:baselineAlignBottom="true" android:layout_marginLeft="3dp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/me_account_layout" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/me_headbackgrond_image"
        android:layout_marginTop="40dp" android:background="@color/white"
        android:padding="8dp">
        <ImageView
            android:layout_width="30dp" android:layout_height="30dp"
            android:src="@mipmap/account_icon" android:id="@+id/image_icon"/>
        <ImageView
            android:layout_width="20dp" android:layout_height="20dp"
            android:src="@mipmap/arrow" android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/account" android:textColor="@color/black"
            android:layout_centerVertical="true" android:layout_toRightOf="@id/image_icon"
            android:layout_marginLeft="13dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/me_course_layout" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/me_account_layout"
        android:background="@color/white" android:layout_marginTop="0.7dp"
        android:padding="10dp">
        <ImageView
            android:layout_width="30dp" android:layout_height="30dp"
            android:src="@mipmap/course_icon" android:id="@+id/image_course_icon"/>
        <ImageView
            android:layout_width="20dp" android:layout_height="20dp"
            android:src="@mipmap/arrow" android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/course" android:textColor="@color/black"
            android:layout_centerVertical="true" android:layout_toRightOf="@id/image_course_icon"
            android:layout_marginLeft="13dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/me_teacher_layout" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/me_course_layout"
        android:background="@color/white" android:layout_marginTop="0.7dp"
        android:padding="10dp">
        <ImageView
            android:layout_width="30dp" android:layout_height="30dp"
            android:src="@mipmap/teacher_icon" android:id="@+id/image_teacher_icon"/>
        <ImageView
            android:layout_width="20dp" android:layout_height="20dp"
            android:src="@mipmap/arrow" android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/teacher" android:textColor="@color/black"
            android:layout_centerVertical="true" android:layout_toRightOf="@id/image_teacher_icon"
            android:layout_marginLeft="13dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/me_collection_layout" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/me_teacher_layout"
        android:background="@color/white" android:layout_marginTop="0.7dp"
        android:padding="10dp">
        <ImageView
            android:layout_width="30dp" android:layout_height="30dp"
            android:src="@mipmap/collection_icon" android:id="@+id/image_collection_icon"/>
        <ImageView
            android:layout_width="20dp" android:layout_height="20dp"
            android:src="@mipmap/arrow" android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/collection" android:textColor="@color/black"
            android:layout_centerVertical="true" android:layout_toRightOf="@id/image_collection_icon"
            android:layout_marginLeft="13dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/me_setting_layout" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/me_collection_layout"
        android:background="@color/white" android:layout_marginTop="15dp"
        android:padding="10dp">
        <ImageView
            android:layout_width="30dp" android:layout_height="30dp"
            android:src="@mipmap/setting_icon" android:id="@+id/image_setting_icon"/>
        <ImageView
            android:layout_width="20dp" android:layout_height="20dp"
            android:src="@mipmap/arrow" android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/setting" android:textColor="@color/black"
            android:layout_centerVertical="true" android:layout_toRightOf="@id/image_setting_icon"
            android:layout_marginLeft="13dp"/>
    </RelativeLayout>


</RelativeLayout>
